# A2Z-Discord-Bot

./: main.py  pyproject.toml
cogs/: fun.py  giveaway.py  gtn.py  help.py  moderation.py  music.py  nsfw.py  owner.py  reaction.py  temp.py  tictactoe.py
