[tool.poetry]
name = "a2z"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
praw = "^7.1.0"
flask = "^1.1.2"
replit = "^2.0.0"
youtube-dl = "^2020.12.29"
PyNaCl = "^1.4.0"
wavelink = "^0.9.6"
pytz = "^2020.5"
"discord.py" = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
